# MSnOutliers

./: .gitmodules  CMakeLists.txt  README.md  clean_build.cmake  delta.txt  models.json  models.txt
docs/: .~lock.Знатнов Егор. Пояснительная записка.docx#  .~lock.КП24_ТЗ_Команда.docx#  .~lock.ПЗ_Панкратов.docx#  .~lock.РО_Общее.docx#  .~lock.РО_Панкратов_formatted.docx#  Знатнов Егор. Пояснительная записка.docx  КП24_ТЗ_Знатнов.docx  КП24_ТЗ_Команда с коммент.docx  КП24_ТЗ_Команда.docx  КП24_ТЗ_Команда_ОК.docx  КП24_ТЗ_Панкратов.docx  ПЗ_Панкратов.docx  ПЗ_Панкратов_без.docx  ПЗ_Титульник_Панкратов.docx  ПЗ_Титульник_Панкратов_ОК.docx  ПМИ_Общее.docx  ПМИ_Общее_ОК.docx  ПМИ_Панкратов.docx  ПМИ_Панкратов_ОК.docx  ПМИ_групповое.docx  ПМИ_групповое_Панкратов.docx  РО_Знатнов.docx  РО_Общее.docx  РО_Панкратов.docx  РО_Панкратов_formatted.docx  РО_Панкратов_ОК.docx  РП_Общее.docx  РП_Панкратов_formatted.docx  ТЗ_Общее.docx  ТЗ_Панкратов.docx  ТЗ_Панкратов_ОК.docx  ТП_Панкратов_formatted.docx  ТП_Панкратов_ОК.docx
docs/Pankratov_docs/: ~$_Панкратов_без_ОК.docx  ПЗ_Панкратов_без.docx  ПЗ_Титульник_Панкратов.docx
docs/Znatnov_docs/: Знатнов_ПЗ.docx  Знатнов_ПМИ.docx  Знатнов_РО.docx  Знатнов_ТЗ.docx  Знатнов_ТП.docx
lib/: CMakeLists.txt  DataProcessor.hpp  Feature.cpp  Feature.hpp  Metrics.cpp  Metrics.hpp  Ndarray.cpp  Ndarray.hpp  RegressionModel.cpp  RegressionModel.hpp
lib/COMMON/: DataDeNoiser.cpp  DataDeNoiser.hpp  DataDistortion.cpp  DataDistortion.hpp  DataProcessor.cpp  DataProcessor.hpp  Feature.cpp  Feature.hpp  FileParser.cpp  FileParser.hpp  Matrix.cpp  Matrix.hpp  MatrixOps.cpp  Metrics.cpp  Metrics.hpp  Ndarray.cpp  Ndarray.hpp  NdarrayOps.cpp
lib/DISTRIBUTIONS/: ErrorDistributions.cpp  ErrorDistributions.hpp
lib/GD/: Adam.hpp  GD.cpp  GD.hpp  MomentumGD.hpp
lib/ML/: Ndarray.cpp  Ndarray.hpp  NdarrayOps.cpp
lib/ML/DBSCAN/: DBSCAN.cpp  DBSCAN.hpp
lib/ML/GradientDescent/: AdaGrad.hpp  Adam.hpp  GD.cpp  GD.hpp  MomentumGD.hpp
lib/ML/KDE/: KDE.cpp  KDE.hpp
lib/ML/KNN/: Knn.cpp  Knn.hpp
lib/ML/LinearRegression/: LinearRegression.cpp  LinearRegression.hpp
lib/ML/OCSVM/: OneClassSVM.cpp  OneClassSVM.hpp
lib/ML/iForest/: Node.cpp  Node.hpp  iForest.cpp  iForest.hpp
lib/MS/: GradMethod.cpp  GradMethod.hpp  Huber.cpp  Huber.hpp  LeastSquares.cpp  LeastSquares.hpp  MinAbsDeviation.cpp  MinAbsDeviation.hpp  StatsMethod.cpp  StatsMethod.hpp  TheilSen.cpp  TheilSen.hpp  Tukey.cpp  Tukey.hpp
src/: CMakeLists.txt  config.h.in  dbscan_test.cpp  drawer.py  graph.cpp  iforest_test.cpp  main.cpp  svm_test.cpp  test_generation.cpp  test_ndarray.cpp  utils.h  writeAndDraw.cpp
src/PAINTINGS/: Drawable.hpp  FunctionPlot.hpp  Graph.hpp  HorizontalLine.hpp  Line.hpp  Scatter.hpp  VerticalLine.hpp  drawer.py
src/configs/: config.json  config.py  config_HUB.json  config_LAD.json  config_LSM.json  config_LSM_group0.json  config_THS.json  config_TUK.json
src/data/: source.csv
src/outputs/: metrics.json
tests/: CMakeLists.txt  test_main.cpp  test_metrics.cpp  test_regression.cpp
ui/: CMakeLists.txt  basicstatdialog.cpp  basicstatdialog.h  config.h.in  defaults.h  generatedialog.cpp  generatedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  modeldialog.cpp  modeldialog.h  modeltemplate.cpp  modeltemplate.h
